--- a/BR-MS/resLookup.html
+++ b/BR-MS/resLookup.html
@@ -923,7 +923,7 @@
                     type: app.type,
                     province: app.selectedLocations[0],
                     city: app.selectedLocations[1],
-                    produceTime: app.produceTime
+                    produceTime: app.produceTime+' 00:00:00'
                 };
                 searchKey['pageNum'] = 1;
                 app.pageNum = 1;
