加入欢迎页面

--- a/BR-MS/mainPage.html
+++ b/BR-MS/mainPage.html
@@ -216,7 +216,7 @@
             menus: [],
             token: '',
             nonUrlBegin: '^', // 用 url 中不可能出现的字符 ^ 表示非 url。用于非 url 的菜单 index
-            router: ''
+            router: 'Welcome.html' // 默认页面：欢迎页面
         },
         computed: {
             roleText: function () {
