--- a/BR-MS/Management.html
+++ b/BR-MS/Management.html
@@ -94,6 +94,8 @@
             <el-radio v-model="query.state" :label="undefined">不限</el-radio>
             <el-radio v-model="query.state" :label="0">申请中</el-radio>
             <el-radio v-model="query.state" :label="1">已撤销</el-radio>
+            <el-radio v-model="query.state" :label="2">已通过</el-radio>
+            <el-radio v-model="query.state" :label="3">已完成</el-radio>
         </el-form-item>
         <el-form-item>
             <el-button type="primary" @click="search">查询</el-button>
@@ -229,6 +231,13 @@
     }
 
     function getData(searchKey,pageNum){
+        if(searchKey.state===2||searchKey.state===3){
+            searchKey.state=0;
+            if(searchKey.state===2)
+                searchKey.isPass=1;
+            else if(searchKey.state===3)
+                searchKey.isDone=1;
+        }
         catchData({
             url:'/common/getnowsche',
             app:app,
