--- a/BR-MS/Management.html
+++ b/BR-MS/Management.html
@@ -95,7 +95,6 @@
             <el-radio v-model="query.state" :label="0">申请中</el-radio>
             <el-radio v-model="query.state" :label="1">已撤销</el-radio>
             <el-radio v-model="query.state" :label="2">已通过</el-radio>
-            <el-radio v-model="query.state" :label="3">已完成</el-radio>
         </el-form-item>
         <el-form-item>
             <el-button type="primary" @click="search">查询</el-button>
@@ -231,12 +230,12 @@
     }
 
     function getData(searchKey,pageNum){
-        if(searchKey.state===2||searchKey.state===3){
-            searchKey.state=0;
-            if(searchKey.state===2)
-                searchKey.isPass=1;
-            else if(searchKey.state===3)
-                searchKey.isDone=1;
+        if(searchKey.state===0){
+            searchKey.isPass=0;
+        }
+        if(searchKey.state===2){
+            searchKey.state=undefined;
+            searchKey.isPass=1;
         }
         catchData({
             url:'/common/getnowsche',
